spec: Fix small typos in optional criteria

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -163,7 +163,7 @@ Das Programm soll grundlegende Arithmetik unterstützen.
 
 \criteriumOptional{Standardbibliothek}{crt:standardlib}
 
-Das Programm soll eine Standardbibliothek mit nützlichen, vordefinierten Regeln unterstützen, die standardmäßig beim Starten des Programms mit eingebunden wird. Bereits implementierte Regeln, die vom Nutzer nochmals implementiert werden, werden als zusätzliche Regeln zu den bereits vorhandenen hinzugefügt nachdem eine Warnung ausgegeben wurde.
+Das Programm soll eine Standardbibliothek mit nützlichen, vordefinierten Regeln unterstützen, die standardmäßig beim Starten des Programms mit eingebunden wird. Bereits implementierte Regeln, die vom Nutzer nochmals implementiert werden, werden als zusätzliche Regeln zu den bereits vorhandenen hinzugefügt, nachdem eine Warnung ausgegeben wurde.
 
 \criteriumOptional{Standardbibliothek deaktivieren und aktivieren}{crt:disablelib}
 
@@ -179,7 +179,7 @@ Das Programm kann einen generierten Graphen als Bilddatei im SVG- oder PNG-Forma
 
 \criteriumOptional{\enquote{Pretty-Printing} von Listen}{crt:prettyprinting}
 
-Das Programm soll Listen bei der Ausgabe einheitlich auf \enquote{\texttt{[x,y,z]}} formatieren.
+Das Programm soll Listen bei der Ausgabe einheitlich auf \enquote{\texttt{[x, y, z]}} formatieren.
 
 \criteriumOptional{Formatierung von Quelltext}{crt:formatting}
 
@@ -346,7 +346,7 @@ Durch Drücken und Halten der linken Maustaste lässt sich der angezeigte Aussch
 \functionality{Zurückschreiten während der Interpretation}{fnc:stepback}
 \fulfills{crt:stepback}
 
-Eine Rückschritt-Schaltfläche erlaubt bei Betätigung den jeweils vorhergehenden Schritt rückgängig zu machen. Im Falle des ersten Schrittes ist diese Schaltfläche deaktiviert.
+Eine Rückschritt-Schaltfläche erlaubt bei Betätigung den jeweils aktuellen Schritt rückgängig zu machen. Im Falle des ersten Schrittes ist diese Schaltfläche deaktiviert.
 
 \functionality{Ausführung der Interpretation bis zur nächsten Lösung}{fnc:continue}
 \fulfills{crt:continue}
