spec: Clarify term 'console' in delimitation section

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -201,7 +201,7 @@ Das Programm beschränkt sich auf die Prolog-Sprache und bietet keine offizielle
 
 \criteriumNot{Nutzung in einer Kommandozeile}{crt:cli}
 
-Das Programm beschränkt sich auf eine graphische Darstellung über GUI-Elemente. Eine Interaktion über die Konsole wird nicht unterstützt.
+Das Programm beschränkt sich auf eine graphische Darstellung über GUI-Elemente. Eine Interaktion über die Kommandozeile wird nicht unterstützt.
 
 \criteriumNot{Professionelle Anwendung}{crt:professionaluse}
 
