spec: Add GUI language and stdlib to program data

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -240,6 +240,12 @@ Eine Installation des Java Runtime Environments Version 8 aufwärts ist auf dem 
 \textbf{Zuletzt geöffnete Dateien} \\
 Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag in der Menüleiste gespeichert.
 
+\textbf{Eingestelle Sprache} \\
+Die letzte vom Nutzer ausgewählte GUI-Sprache wird gespeichert, damit diese nach einem Programm-Neustart nicht erneut eingestellt werden muss.
+
+\textbf{Standardbibliothek} \\
+Der Status der Standardbibliothek (``Aktiviert''/``Deaktiviert'') wird gespeichert, damit diese Einstellung nach einem Programm-Neustart erhalten bleibt.
+
 Außer den oben genannten werden keinerlei Daten gespeichert.
 
 \section{Funktionale Anforderungen}
