spec: Fix mistake where the visualisation subsection heading was deleted

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -965,6 +965,10 @@ Diese werden durch Schaltflächen mit Symbolen repräsentiert.
 Die Symbole stehen für das Erstellen, Öffnen und Speichern von Dateien (1), Parsen und Formatieren von Prolog-Programmen (2) und \enquote{Ausführung eines Einzelschritts} sowie \enquote{Ausführung bis zur nächsten Lösung} (3).
 Die Schaltflächen sind dabei nur aktiv, wenn auch ihre Gegenstücke an anderen Stellen in der GUI aktiv sind.
 Im gezeigten Zustand sind die Schrittschaltflächen inaktiv, da kein prolog-Programm erfolgreich geparst wurde.
+
+\subsection{Visualisierung}
+
+Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
 Die visualisierte Abfrage ist \texttt{grandfather(X, Y)} im Beispielprogramm.
 
 \subsubsection{Wurzel}
