spec: Add GUI draft for the preferences menu

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -966,6 +966,22 @@ Die Symbole stehen für das Erstellen, Öffnen und Speichern von Dateien (1), Pa
 Die Schaltflächen sind dabei nur aktiv, wenn auch ihre Gegenstücke an anderen Stellen in der GUI aktiv sind.
 Im gezeigten Zustand sind die Schrittschaltflächen inaktiv, da kein prolog-Programm erfolgreich geparst wurde.
 
+\subsubsection{Einstellungen}
+
+Manche Kannkriterien lassen den Nutzer allgemeine Einstellungen für das Verhalten des Programms festlegen.
+Für solche Einstellungen wird ein Eintrag zur Menüleiste hinzugefügt.
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_preferences.png}
+}
+\captionof{figure}{Das Einstellungsmenü mit Sprachauswahl}
+\end{minipage}
+
+Der Eintrag \enquote{Standardbibliothek laden} (1) lässt den Nutzer festlegen, ob vor der Interpretation einer Abfrage die Standardbibliothek geladen werden soll.
+
+Der Eintrag \enquote{Sprache} (2) lässt den Nutzer die Sprache der GUI ändern.
+
 \subsection{Visualisierung}
 
 Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
