spec: Revise nonfunctional criteria
Split N2 into two different criteria and changed the description of the visualization speed

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -399,9 +399,13 @@ Eine automatische Formatierung von Prolog-Quellcode ist über eine Schaltfläche
 
 Das Programm startet auf einem modernen System innerhalb von 30 Sekunden und ist voll einsatzbereit.
 
-\nonFunctionality{Geschwindigkeit beim Parsen und Visualisieren}{nfc:timelimit}
+\nonFunctionality{Dauer beim Parsen}{nfc:parsespeed}
 
-Ein importiertes oder geschriebenes Prolog-Programm im Umfang von maximal 100 Zeilen Code ist innerhalb von maximal 3 Sekunden geparst und einzelne Schritte werden innerhalb von 5 Sekunden visualisiert.
+Ein importiertes oder geschriebenes Prolog-Programm im Umfang von maximal 100 Zeilen Code ist innerhalb von maximal 3 Sekunden geparst.
+
+\nonfunctionality{Dauer der Visualisierung}{nfc:visualizationspeed}
+
+Ein Graph mit maximal 100 Knoten soll in maximal 10 Sekunden generiert sein.
 
 \nonFunctionality{Design}{nfc:design}
 
