spec: Fix a bunch of tests
- s/Schaltflächen/Funktionen in der Menüleiste
- s/Menü-Leiste/Menüleiste
- s/Fortführen-Schaltfläche/Nächste-Lösung-Schaltfläche
- Change example program in T15, T16 and T17 (incorrect solution)

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -506,7 +506,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \tests{fnc:errorcheck}
 
 \teststep{Der Nutzer hat das inkorrektes Prolog-Programm \texttt{father.} in den Editor eingetragen.}
-{Der Nutzer betätigt die Parsen-Schaltfläche, um das Prolog-Programm zu parsen.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste, um das Prolog-Programm zu parsen.}
 {Die Ausführung wird abgebrochen. Eine verständliche Fehlermeldung (``Syntax-Fehler in Zeile 1'') wird in der Konsole angezeigt.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -515,7 +515,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \tests{fnc:interpreter}
 
 \teststep{Das \texttt{simpsons.pl}-Programm ist im Editorfenster eingegeben oder aus einer Datei geöffnet worden.}
-{Der Nutzer klickt auf die Parsen-Schaltfläche des Hauptfensters.}
+{Der Nutzer klickt auf die Parsen-Schaltfläche in der Menüleiste.}
 {Das Prolog-Programm wird erfolgreich geparst, es kommt zu keinen Fehlern. In das Eingabefeld kann eine Abfrage eingegeben werden.}
 
 \teststep{Das Prolog-Programm wurde geparst. In das Eingabefeld kann eine Abfrage eingegeben werden.}
@@ -530,7 +530,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \tests{fnc:interpreteroutput}
 
 \teststep{Der Nutzer hat das korrekte Prolog-Programm \texttt{father(homer, bart). father(homer, lisa).} im Editor eingegeben.}
-{Der Nutzer betätigt die Parsen-Schaltfläche im Hauptfenster.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste.}
 {In der Konsole wird eine Erfolgsnachricht ausgegeben.}
 
 \teststep{Das Eingabefeld erwartet eine Abfrage.}
@@ -582,7 +582,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Ein Auswahl-Dialog öffnet sich.}
 
 \teststep{Ein Dialog mit den Auswahlmöglichkeiten \enquote{SVG} und \enquote{PNG} ist geöffnet}
-{Der Nutzer wählt eine der beiden Optionen aus. Anschließend betätigt er die Speichern-Schaltfläche.}
+{Der Nutzer wählt eine der beiden Optionen aus. Anschließend betätigt er die Speichern-Schaltfläche in der Menüleiste.}
 {Ein Datei-Speichern-Dialog öffnet sich.}
 
 \teststep{Ein Datei-Speichern-Dialog ist geöffnet.}
@@ -623,11 +623,11 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Der Inhalt des Editors wird entsprechend der Eingabe geändert.}
 
 \teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen.}
-{Der Nutzer betätigt die Formatieren-Schaltfläche.}
+{Der Nutzer betätigt die Formatieren-Funktion in der Menüleiste.}
 {Das \texttt{simpsons.pl}-Programm wird formatiert und entspricht dem formatierten \texttt{simpsons.pl}-Programm im Anhang.}
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen.}
-{Der Nutzer wählt über die Menü-Leiste die Speichern-Funktion aus.}
+{Der Nutzer wählt über die Menüleiste die Speichern-Funktion aus.}
 {Ein Speichern-Dialog öffnet sich.}
 
 \teststep{Der Nutzer hat über den Speichern-Dialog ein Verzeichnis sowie einen Dateinamen eingetragen.}
@@ -635,15 +635,15 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Das Prolog-Programm wird im gewählten Verzeichnis gespeichert.}
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert.}
-{Der Nutzer betätigt die Parsen-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen, gespeichert und durch den Parser verarbeitet worden.}
-{Der Nutzer fokussiert durch einen Mausklick das Editor-Fenster und fügt vor die erste Zeile das Wort \enquote{Fehler} gefolgt von einem Umbruch ein.}
+{Der Nutzer fokussiert durch einen Mausklick das Editor-Fenster und fügt vor die erste Zeile das Wort \enquote{Fehler}, gefolgt von einem Umbruch ein.}
 {Das Eingabefeld wird gesperrt.}
 
 \teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert worden. Das Wort \enquote{Fehler} wurde vor die ursprüngliche erste Zeile eingetragen.}
-{Der Nutzer betätigt die Parsen-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste.}
 {Das Eingabefeld bleibt weiterhin gesperrt. Der Parser gibt über die Konsole eine Syntax-Fehlermeldung aus.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -656,19 +656,19 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \tests{fnc:visualization}
 
 \teststep{Der Nutzer hat das Programm geöffnet.}
-{Der Nutzer wählt über die Menü-Leiste die Öffnen-Funktion aus.}
+{Der Nutzer wählt über die Menüleiste die Öffnen-Funktion aus.}
 {Ein Öffnen-Dialog erscheint.}
 
 \teststep{Der Nutzer hat ein Prolog-Programm ausgewählt, welches das formatierte \texttt{simpsons.pl}-Programm enthält.}
-{Der Nutzer betätigt die Öffnen-Schaltfläche.}
+{Der Nutzer betätigt die Öffnen-Schaltfläche in der Menüleiste.}
 {Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei.}
 
 \teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei.}
-{Der Nutzer betätigt die Parsen-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
-{Der Nutzer gibt im Eingabefeld \texttt{mother(marge, lisa).} ein und bestätigt mit der Eingabe-Taste.}
+{Der Nutzer gibt im Eingabefeld \texttt{mother(marge, bart).} ein und bestätigt mit der Eingabe-Taste.}
 {Der Parser verarbeitet die Abfrage korrekt. Die Interpretation wird gestartet und eine Visualisierung angezeigt.}
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
@@ -691,19 +691,19 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Das \texttt{simpsons.pl}-Programm wird im Editor geöffnet.}
 
 \teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
-{Der Nutzer betätigt die Parsen-Schaltfläche.}
+{Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
-{Der Nutzer gibt im Eingabefeld \texttt{mother(X, lisa).} ein und bestätigt mit der Eingabe-Taste.}
+{Der Nutzer gibt im Eingabefeld \texttt{mother(X, bart).} ein und bestätigt mit der Eingabe-Taste.}
 {Der Parser verarbeitet die Abfrage korrekt. Die Interpretation wird gestartet und eine Visualisierung angezeigt.}
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
-{Der Nutzer betätigt die Fortführen-Schaltfläche.}
+{Der Nutzer betätigt die Nächste-Lösung-Schaltfläche.}
 {Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \texttt{X = marge} ausgegeben. Der Graph entspricht dem Graphen bei der Findung der ersten Lösung.}
 
 \teststep{Der Interpreter hat eine erste Lösung gefunden. Der Graph ist aktualisiert worden.}
-{Der Nutzer betätigt die Fortführen-Schaltfläche erneut.}
+{Der Nutzer betätigt die Nächste-Lösung-Schaltfläche erneut.}
 {Der Interpreter wird bis zur Findung einer weiteren Lösung fortgeführt.}
 
 \teststep{Der Interpreter versucht, eine weitere Lösung für die Abfrage zu finden.}
@@ -712,7 +712,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\test{Interpretieren einer Abfrage, Ausführung bis zur nächsten Ausgabe, Navigation der Visualisierung, Zurückschreiten und Export}{tst:sys4}
+\test{Interpretieren einer Abfrage, Ausführung bis zur nächsten Lösung, Navigation der Visualisierung, Zurückschreiten und Exportieren}{tst:sys4}
 \tests{fnc:interpreter}
 \tests{fnc:visualization}
 \tests{fnc:continue}
@@ -722,8 +722,8 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \tests{fnc:imageexport}
 \tests{fnc:latexexport}
 
-\teststep{Der Nutzer hat das formatierte \texttt{simpsons.pl}-Programm aus dem Anhang im Editor eingetragen, durch den Parser verarbeiten lassen und die Abfrage \texttt{mother(X, lisa).} gestellt. Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
-{Der Nutzer betätigt die Fortführen-Schaltfläche.}
+\teststep{Der Nutzer hat das formatierte \texttt{simpsons.pl}-Programm aus dem Anhang im Editor eingetragen, durch den Parser verarbeiten lassen und die Abfrage \texttt{mother(X, bart).} gestellt. Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
+{Der Nutzer betätigt die Nächster-Schritt-Schaltfläche.}
 {Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \texttt{X = marge} ausgegeben. Der Graph entspricht dem Graphen bei der Findung der ersten Lösung.}
 
 \teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde.}
@@ -735,20 +735,20 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Es wird in den gezeigten Ausschnitt der Visualisierung hineingezoomt.}
 
 \teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt.}
-{Der Nutzer wählt über die Menü-Leiste die Option \enquote{Bild exportieren} aus.}
-{Ein Export-Dialog öffnet sich.}
+{Der Nutzer wählt über die Menüleiste die Option \enquote{Exportieren als Bild} aus.}
+{Ein Speichern-Dialog öffnet sich.}
 
-\teststep{Der Nutzer hat über die Auswahl des Export-Dialogs zwischen dem Format PNG und SVG ausgewählt. Ein Verzeichnis wurde ausgewählt.}
-{Der Nutzer betätigt die Export-Schaltfläche.}
-{Die gesamte Visualisierung wird im ausgewählten Format exportiert.}
+\teststep{Der Nutzer hat über die Auswahl des Speichern-Dialogs zwischen dem Format PNG und SVG ausgewählt. Ein Verzeichnis wurde ausgewählt.}
+{Der Nutzer betätigt die Speichern-Schaltfläche.}
+{Die gesamte Visualisierung wird im ausgewählten Format gespeichert.}
 
 \teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt. Die Visualisierung wurde bereits als Bild-Datei exporiert.}
-{Der Nutzer wählt über die Menü-Leiste die Option \enquote{LaTeX exportieren} aus.}
-{Ein Export-Dialog öffnet sich.}
+{Der Nutzer wählt über die Menüleiste die Option \enquote{Exportieren als TikZ} aus.}
+{Ein Speichern-Dialog öffnet sich.}
 
-\teststep{Der Nutzer hat das Zielverzeichnis über die Auswahl des Export-Dialogs ausgewählt.}
-{Der Nutzer betätigt die Export-Schaltfläche.}
-{Die gesamte Visualisierung wird als LaTeX-Quellcode exportiert.}
+\teststep{Der Nutzer hat das Zielverzeichnis über die Auswahl des Speichern-Dialogs ausgewählt.}
+{Der Nutzer betätigt die Speichern-Schaltfläche.}
+{Die gesamte Visualisierung wird als LaTeX-Quellcode gespeichert.}
 
 %%%%%%%%%%%%%
 \appendix
