spec: Fix typo in nonfunctionality control sequence

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -399,7 +399,7 @@ Das Programm startet auf einem modernen System innerhalb von 30 Sekunden und ist
 
 Ein importiertes oder geschriebenes Prolog-Programm im Umfang von maximal 100 Zeilen Code ist innerhalb von maximal 3 Sekunden geparst.
 
-\nonfunctionality{Dauer der Visualisierung}{nfc:visualizationspeed}
+\nonFunctionality{Dauer der Visualisierung}{nfc:visualizationspeed}
 
 Ein Graph mit maximal 100 Knoten soll in maximal 10 Sekunden generiert sein.
 
